#38 - added sonarqube configuration and completed all sonarqube tasks while keeping unit test and pitest coverage at or around 100%