@@ -1,11 +1,13 @@
 package com.higgs.server.web.svc.util;
 
+import com.higgs.server.db.entity.DtoFilter;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
+import java.util.List;
+import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
 public class PersistenceUtils {
@@ -13,8 +15,16 @@ public class PersistenceUtils {
         repository.deleteAll(saved.stream()
                 .filter(param -> !updated.stream()
                         .map(joinProvider)
-                        .collect(Collectors.toList())
+                        .toList()
                         .contains(joinProvider.apply(param)))
-                .collect(Collectors.toList()));
+                .toList());
+    }
+
+    public <T extends DtoFilter> List<T> getByHomeSeqs(final DtoFilter dtoFilter, final Collection<Long> homeSeqs, final Function<List<Long>, List<T>> provider) {
+        return provider.apply(Optional.ofNullable(dtoFilter)
+                .map(DtoFilter::getHomeSeq)
+                .filter(homeSeqs::contains)
+                .map(List::of)
+                .orElse(homeSeqs.stream().toList()));
     }
 }
